...
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
    </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:backgroundTint="@null"
        android:src="@drawable/ic_star_border_white_24dp"
        app:layout_anchor="@id/iv_detail_avatar"
        app:layout_anchorGravity="bottom|end"/>

    <ImageView
        android:id="@+id/fab_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_arrow_back_white_24dp"
        app:backgroundTint="@android:color/transparent"
...
