<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/authentication_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/go4lunch_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/go4lunch_background" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.24000001">

                <ImageView
                    android:id="@+id/go4lunch_logo"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toTopOf="@+id/go4lunch_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.52"
                    app:srcCompat="@drawable/ic_hot_clipart_hot_food" />

                <TextView
                    android:id="@+id/go4lunch_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="64sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/go4lunch_logo" />

                <TextView
                    android:id="@+id/go4lunch_slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/go4lunch_slogan"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/go4lunch_title" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_sign_in_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="16dp"
                    android:paddingStart="10dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="12dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/go4lunch_slogan" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:hint="@string/email_hint"
                    android:paddingBottom="12dp"
                    android:theme="@style/TextInputLayoutStyle"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/facebook_sign_in_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/facebook_sign_in_button">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionDone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_sign_in_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="visible"
                    app:buttonSize="wide"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/facebook_sign_in_button" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:hint="@string/password_hint"
                    android:paddingBottom="12dp"
                    android:theme="@style/TextInputLayoutStyle"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/google_sign_in_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/google_sign_in_button">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/twitter_sign_in_button"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:visibility="visible"
                    app:buttonSize="wide"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button" />

                <LinearLayout
                    android:id="@+id/email_password_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/twitter_sign_in_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/twitter_sign_in_button">

                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/sign_in"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/email_create_account_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/create_account"
                        android:textColor="@android:color/white" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/email_password_sign_in_button"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@android:color/white"
                android:text="@string/login_in_email_password"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@id/constraint_layout_container"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/constraint_layout_container"
                app:layout_constraintTop_toBottomOf="@id/constraint_layout_container" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>